# paneru

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  LICENSE.txt  README.md  build.rs  build.zig  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: m5nynrg9blaq8bh0lxizbrwr1zy7ff1x-source
.github/workflows/: release.yml  rust.yml
assets/: Info.plist  launchd.plist
nix/: README.md  checks.nix  darwin.nix  home.nix  package.nix
scripts/: build-app.sh  build-dmg.sh  download-sparkle.sh
src/: app.rs  commands.rs  config.rs  display.rs  ecs.rs  errors.rs  events.rs  lib.rs  main.rs  manager.rs  menubar.rs  overlay.rs  params.rs  platform.rs  process.rs  reader.rs  resize.rs  root.zig  service.rs  skylight.rs  systems.rs  tests.rs  triggers.rs  updater.rs  util.rs  windows.rs
src/commands/: query.rs
src/config/: decorations.rs  padding.rs  swipe.rs
src/ecs/: config_reload.rs  display.rs  floating.rs  focus.rs  layout.rs  mouse.rs  observation.rs  params.rs  persistence.rs  restore.rs  runtime.rs  scroll.rs  state.rs  systems.rs  triggers.rs  width_ratio.rs  workspace.rs
src/ecs/scroll/: paging.rs  tests.rs
src/manager/: app.rs  display.rs  layout.rs  process.rs  skylight.rs  windows.rs
src/manager/skylight/: query.rs  transaction.rs
src/manager/skylight/query/: managed_displays.rs  spaces.rs  windows.rs
src/platform/: display.rs  frame_pacer.rs  input.rs  mission_control.rs  notify.rs  process.rs  service.rs  workspace.rs
src/tests/: display.rs  harness.rs  interaction.rs  mocks.rs  session_restore.rs  state.rs  tabs.rs  tiling.rs
