[package]
name = "paneru"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
accessibility-sys = "0.1.3"
chrono = "0.4.42"
env_logger = "0.11.6"
log = "0.4.25"
notify = { version = "8.0.0", features = ["macos_fsevent"] }
objc2 = { version = "0.6.0", features = ["catch-all", "exception"] }
objc2-app-kit = "0.3.0"
objc2-core-foundation = { version = "0.3.0", features = ["CFRunLoop"] }
objc2-core-graphics = "0.3.0"
objc2-foundation = { version = "0.3.0", features = ["NSNotification"] }
serde = { version = "1.0.219", features = ["derive"] }
stdext = "0.3.3"
toml = "0.8.20"
