[package]
name = "paneru"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "A sliding, tiling window manager for MacOS."
homepage = "https://github.com/karinushka/paneru"
repository = "https://github.com/karinushka/paneru"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["macos", "windowmanager", "window", "manager"]

[lints.clippy]
pedantic = "warn"

[dependencies]
accessibility-sys = "0.2.0"
bevy = { version = "0.17.2", default-features = false }
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["cargo", "derive"] }
embed_plist = "1.2.2"
env_logger = "0.11.6"
launchctl = "0.3.2"
libc = "0.2.177"
log = "0.4.25"
notify = { version = "8.0.0", features = ["macos_fsevent"] }
objc2 = { version = "0.6.0", features = ["catch-all", "exception"] }
objc2-app-kit = "0.3.0"
objc2-core-foundation = { version = "0.3.0", features = ["CFRunLoop"] }
objc2-core-graphics = "0.3.0"
objc2-foundation = { version = "0.3.0", features = ["NSNotification"] }
serde = { version = "1.0.219", features = ["derive"] }
stdext = "0.3.3"
toml = "0.9.8"
