[package]
name = "paneru"
version = "0.3.2"
edition = "2024"
rust-version = "1.89.0"
description = "A sliding, tiling window manager for MacOS."
homepage = "https://github.com/karinushka/paneru"
repository = "https://github.com/karinushka/paneru"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["macos", "windowmanager", "window", "manager"]

[lints.clippy]
pedantic = "warn"

[dependencies]
accessibility-sys = "0.2.0"
bevy = { version = "0.18.0", default-features = false, features = [
  "multi_threaded",
] }
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["cargo", "derive"] }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
embed_plist = "1.2.2"
env_logger = "0.11.8"
launchctl = "0.3.2"
libc = "0.2.180"
log = "0.4.29"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
objc2 = { version = "0.6.3", features = ["catch-all", "exception"] }
objc2-app-kit = "0.3.2"
objc2-core-foundation = { version = "0.3.2", features = ["CFRunLoop"] }
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSNotification"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
stdext = "0.3.3"
toml = "0.9.11"
